fixed spacing on remove env-vars buttons

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -250,8 +250,8 @@ form.expando {
       overflow: hidden;
       white-space: nowrap;
       > i {
-        padding: 1ex;
-        padding-left: 7em;
+        padding: 1em;
+        padding-left: 6.5em;
         transition: .2s padding ease-in-out;
       }
       > span {
@@ -264,6 +264,7 @@ form.expando {
         color: @redLight;
         > i {
           padding-left: 2em;
+          padding-right: .25em;
           transition-duration: .1s;
         }
         > span {
